# mcp-bible

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  test_bible_mcp.py
.github/workflows/: docker-publish.yml
docker/: README.md  docker-compose.prod.rest.yml  docker-compose.prod.v1.0.0.yml  docker-compose.prod.yml  docker-compose.rest.yml  docker-compose.yml
examples/: curl_examples.sh
mcp_bible/: __init__.py  bible_service.py  config.py  server.py  service.py
mcp_bible/features/: __init__.py
mcp_bible/features/get_passage/: __init__.py  instructions.md  models.py  routes.py  tool.py
mcp_bible/shared/: __init__.py  models.py
tests/: test_modes.py
