[project]
name = "mcp-bible"
version = "1.0.0"
description = "Bible MCP server using mcp-weather core infrastructure"
requires-python = ">=3.10"
authors = [
    {name = "Geovanny F. Fajardo", email = "gffajardo@gmail.com"},
]
dependencies = [
    # Install mcp-weather from GitHub to get the core infrastructure
    "mcp-weather @ git+https://github.com/geosp/mcp-weather.git",
    # Web scraping and HTTP client
    "httpx>=0.25.0",
    "beautifulsoup4>=4.12.0",
    # Logging
    "structlog>=23.0.0",
    # Alternative: Install from local development copy
    # To use local version during development, run:
    #   uv add --editable ../../
    # This creates an editable install that reflects your local changes
    # Alternative: Install from PyPI (once published)
    # "mcp-weather>=0.1.0",
]

[project.scripts]
mcp-bible = "mcp_bible.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true